shop-user-service/src/main/java/com/example/shopuserservice/web/error/FeignErrorDecoder.java
package com.example.shopuserservice.web.error;

import feign.Response;
import feign.codec.ErrorDecoder;

public class FeignErrorDecoder implements ErrorDecoder {
    @Override
    public Exception decode(String methodKey, Response response) {

        return null;
    }
}
